Pushing new version of website-diag

--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -270,24 +270,14 @@
 </ul>
 <h2>Requirements</h2>
 <ul>
-<li>
-<p>Students at the final year of a study in computer science, artificial intelligence, physics, or a related area.</p>
-</li>
-<li>
-<p>Basic level of knowledge and experience in Deep Learning in Healthcare</p>
-</li>
+<li>Students at the final year of a study in computer science, artificial intelligence, physics, or a related area.</li>
+<li>Basic level of knowledge and experience in Deep Learning in Healthcare</li>
 </ul>
 <h2>Information</h2>
 <ul>
-<li>
-<p>Project duration: 6-9 months</p>
-</li>
-<li>
-<p>Location: Radboud University Nijmegen Medical Centre</p>
-</li>
-<li>
-<p>For more information, please contact <a href="http://diagnijmegen.nl/index.php/Person?name=Patrick_Brand">Patrick Brand</a></p>
-</li>
+<li>Project duration: 6-9 months</li>
+<li>Location: Radboud University Nijmegen Medical Centre</li>
+<li>For more information, please contact <a href="http://diagnijmegen.nl/index.php/Person?name=Patrick_Brand">Patrick Brand</a></li>
 </ul>
     </div>
 
