--- a/software/grand-challenge/index.html
+++ b/software/grand-challenge/index.html
@@ -316,11 +316,12 @@
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 </div>
 
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <img src="https://beta.diagnijmegen.nl/images/people/Bram_van_Ginneken.jpg" class="img-thumbnail lazyload rounded-circle" alt=" Bram van Ginneken">
-    <h3 class="person-name"> Bram van Ginneken</h3>
-</div>        </div>
+    <a href="https://beta.diagnijmegen.nl/members/bram_van_ginneken/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bram_van_Ginneken-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bram van Ginneken"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bram_van_ginneken/">Bram van Ginneken</a></h3>
+    <h4 class="person-title"><small>Professor</small></h4>
+</div>
+        </div>
     </div>
 
     </div>
