--- a/members/nikita-moriakov/index.html
+++ b/members/nikita-moriakov/index.html
@@ -287,7 +287,7 @@
 
                 <dt>Bio:</dt>
                 <dd><p>Nikita Moriakov is a postdoctoral researcher in Diagnostic Image Analysis Group within the department of Radiology and Nuclear Medicine of the Radboud University Medical Center. Previously he obtained his Master's degree in Applied Mathematics from Delft University of Technology in 2012 (cum laude). In October 2016 he received his Ph.D. at the same university, defending thesis Entropy and Kolmogorov Complexity. He is currently working on the IBSCREEN and MR Brain projects. 
-His supervisor is Jonas Teuwen.</p></dd>
+His supervisor is <a href="/members/jonas-teuwen">Jonas Teuwen</a>.</p></dd>
 
 
 
