--- a/vacancies/phd-marble-clinical/index.html
+++ b/vacancies/phd-marble-clinical/index.html
@@ -276,18 +276,19 @@ All additional information about the vacancy can be obtained from Dr. Jonas Teuw
     <h2>People</h2>
     <div class="container">
         <div class="row people-grid">
-
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <img src="https://beta.diagnijmegen.nl/images/people/Ritse_Mann.jpg" class="img-thumbnail lazyload rounded-circle" alt="Ritse Mann">
-    <h3 class="person-name">Ritse Mann</h3>
-</div>
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="https://beta.diagnijmegen.nl/members/jonas-teuwen/"><img data-src="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Jonas Teuwen"></a>
+    <a href="https://beta.diagnijmegen.nl/https://www.aiimnijmegen.nl/members/ritse-mann/"><img data-src="https://beta.diagnijmegen.nl/images/people/Ritse_Mann.jpg" class="img-thumbnail rounded-circle lazyload" alt="Ritse Mann"></a>
+
+    <h3 class="person-name"><a href="https://www.aiimnijmegen.nl/members/ritse-mann/">Ritse Mann</a></h3>
+
+    <h4 class="person-title"><small>Breast and interventional radiologist</small></h4>
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+    <a href="https://beta.diagnijmegen.nl/https://beta.diagnijmegen.nl/members/jonas-teuwen/"><img data-src="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Jonas Teuwen"></a>
+
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/jonas-teuwen/">Jonas Teuwen</a></h3>
+
     <h4 class="person-title"><small>Assistant professor</small></h4>
-</div>
-        </div>
+</div>        </div>
     </div>
     </main>
 
