--- a/software/sol/index.html
+++ b/software/sol/index.html
@@ -331,25 +331,25 @@ built around SOL to other departments of Radboud University in 2019.</p>
         <div class="row people-grid">
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
+    <a href="members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">Paul Konstantin Gerke</a></h3>
+    <h3 class="person-name"><a href="members/paul-konstantin-gerke/">Paul Konstantin Gerke</a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="https://beta.diagnijmegen.nl/members/sil-van-de-leemput/"><img data-src="https://beta.diagnijmegen.nl/images/people/Sil_van_de_Leemput-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Sil van de Leemput"></a>
+    <a href="members/sil-van-de-leemput/"><img data-src="https://beta.diagnijmegen.nl/images/people/Sil_van_de_Leemput-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Sil van de Leemput"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/sil-van-de-leemput/">Sil van de Leemput</a></h3>
+    <h3 class="person-name"><a href="members/sil-van-de-leemput/">Sil van de Leemput</a></h3>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="https://beta.diagnijmegen.nl/members/thomas-de-bel/"><img data-src="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg" class="img-thumbnail rounded-circle lazyload" alt="Thomas de Bel"></a>
+    <a href="members/thomas-de-bel/"><img data-src="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg" class="img-thumbnail rounded-circle lazyload" alt="Thomas de Bel"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/thomas-de-bel/">Thomas de Bel</a></h3>
+    <h3 class="person-name"><a href="members/thomas-de-bel/">Thomas de Bel</a></h3>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 </div>
@@ -370,9 +370,9 @@ built around SOL to other departments of Radboud University in 2019.</p>
     <h3 class="person-name"> Xie Weiyi</h3>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="https://beta.diagnijmegen.nl/members/patrick-brand/"><img data-src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Patrick Brand"></a>
+    <a href="members/patrick-brand/"><img data-src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Patrick Brand"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/patrick-brand/">Patrick Brand</a></h3>
+    <h3 class="person-name"><a href="members/patrick-brand/">Patrick Brand</a></h3>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 </div>
