--- a/software/ophthalmology_workstation/index.html
+++ b/software/ophthalmology_workstation/index.html
@@ -275,9 +275,11 @@
         <div class="row people-grid">
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="members/harm-van-zeeland/"><img data-src="https://beta.diagnijmegen.nl/images/people/Harm_van_Zeeland-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Harm van Zeeland"></a>
 
-    <h3 class="person-name"><a href="members/harm-van-zeeland/">Harm van Zeeland <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+
+    <a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/"><img data-src="https://beta.diagnijmegen.nl/images/people/Harm_van_Zeeland-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Harm van Zeeland"></a>
+
+    <h3 class="person-name"><a href="{ person_url }}">Harm van Zeeland <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
@@ -285,9 +287,11 @@
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
 
-    <h3 class="person-name"><a href="members/james-meakin/">James Meakin <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+
+    <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
+
+    <h3 class="person-name"><a href="{ person_url }}">James Meakin <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 
@@ -295,9 +299,11 @@
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="members/bart-liefers/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bart_Liefers-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bart Liefers"></a>
 
-    <h3 class="person-name"><a href="members/bart-liefers/">Bart Liefers <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+
+    <a href="https://beta.diagnijmegen.nl/members/bart-liefers/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bart_Liefers-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bart Liefers"></a>
+
+    <h3 class="person-name"><a href="{ person_url }}">Bart Liefers <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 
@@ -305,9 +311,11 @@
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="members/clarisa-sanchez/"><img data-src="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg" class="img-thumbnail rounded-circle lazyload" alt="Clarisa Sánchez"></a>
 
-    <h3 class="person-name"><a href="members/clarisa-sanchez/">Clarisa Sánchez <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+
+    <a href="https://beta.diagnijmegen.nl/members/clarisa-sanchez/"><img data-src="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg" class="img-thumbnail rounded-circle lazyload" alt="Clarisa Sánchez"></a>
+
+    <h3 class="person-name"><a href="{ person_url }}">Clarisa Sánchez <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Associate professor</small></h4>
 
