--- a/vacancies/phd-marble-clinical/index.html
+++ b/vacancies/phd-marble-clinical/index.html
@@ -285,7 +285,7 @@ All additional information about the vacancy can be obtained from Dr. Jonas Teuw
 
     <a href="https://www.aiimnijmegen.nl/members/ritse-mann/"><img data-src="https://beta.diagnijmegen.nl/images/people/Ritse_Mann.jpg" class="img-thumbnail rounded-circle lazyload" alt="Ritse Mann"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Ritse Mann <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.aiimnijmegen.nl/members/ritse-mann/">Ritse Mann <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Breast and interventional radiologist</small></h4>
 
@@ -295,7 +295,7 @@ All additional information about the vacancy can be obtained from Dr. Jonas Teuw
 
     <a href="https://beta.diagnijmegen.nl/members/jonas-teuwen/"><img data-src="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Jonas Teuwen"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Jonas Teuwen </small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/jonas-teuwen/">Jonas Teuwen </small></a></h3>
 
     <h4 class="person-title"><small>Assistant professor</small></h4>
 
