--- a/vacancies/phd-progression-amd/index.html
+++ b/vacancies/phd-progression-amd/index.html
@@ -285,7 +285,7 @@
 
     <a href="https://beta.diagnijmegen.nl/members/clarisa-sánchez/"><img data-src="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg" class="img-thumbnail rounded-circle lazyload" alt="Clarisa Sánchez"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Clarisa Sánchez </small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/clarisa-sánchez/">Clarisa Sánchez </small></a></h3>
 
     <h4 class="person-title"><small>Associate professor</small></h4>
 
