--- a/software/ophthalmology_workstation/index.html
+++ b/software/ophthalmology_workstation/index.html
@@ -279,7 +279,7 @@
 
     <a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/"><img data-src="https://beta.diagnijmegen.nl/images/people/Harm_van_Zeeland-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Harm van Zeeland"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Harm van Zeeland <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/">Harm van Zeeland <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
@@ -291,7 +291,7 @@
 
     <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">James Meakin <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">James Meakin <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 
@@ -303,7 +303,7 @@
 
     <a href="https://beta.diagnijmegen.nl/members/bart-liefers/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bart_Liefers-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bart Liefers"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Bart Liefers <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bart-liefers/">Bart Liefers <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 
@@ -315,7 +315,7 @@
 
     <a href="https://beta.diagnijmegen.nl/members/clarisa-sanchez/"><img data-src="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg" class="img-thumbnail rounded-circle lazyload" alt="Clarisa Sánchez"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Clarisa Sánchez <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/clarisa-sanchez/">Clarisa Sánchez <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Associate professor</small></h4>
 
