--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -293,7 +293,7 @@
 
     <a href="https://beta.diagnijmegen.nl/members/henkjan-huisman/"><img data-src="https://beta.diagnijmegen.nl/images/people/Henkjan_Huisman.jpg" class="img-thumbnail rounded-circle lazyload" alt="Henkjan Huisman"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Henkjan Huisman </small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/henkjan-huisman/">Henkjan Huisman </small></a></h3>
 
     <h4 class="person-title"><small>Associate professor</small></h4>
 
@@ -302,7 +302,7 @@
 
     <a href="https://beta.diagnijmegen.nl/members/patrick-brand/"><img data-src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Patrick Brand"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Patrick Brand </small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/patrick-brand/">Patrick Brand </small></a></h3>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 
