--- a/vacancies/deep-learning-for-artifacts/index.html
+++ b/vacancies/deep-learning-for-artifacts/index.html
@@ -294,7 +294,7 @@ Is it possible to reliably detect the artifacts in whole slide images?</p>
 
     <a href="https://www.computationalpathologygroup.eu/members/caner-mercan/"><img data-src="https://beta.diagnijmegen.nl/images/people/Caner_Mercan-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Caner Mercan"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Caner Mercan <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/caner-mercan/">Caner Mercan <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Postdoctoral researcher</small></h4>
 
