--- a/vacancies/deep-learning-lung-immune-therapy/index.html
+++ b/vacancies/deep-learning-lung-immune-therapy/index.html
@@ -316,7 +316,7 @@ Multiple student projects are available in the context of this research. Example
 
     <a href="https://www.computationalpathologygroup.eu/members/francesco-ciompi/"><img data-src="https://beta.diagnijmegen.nl/images/people/Francesco_Ciompi-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Francesco Ciompi"></a>
 
-    <h3 class="person-name"><a href="{ person_url }}">Francesco Ciompi <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/francesco-ciompi/">Francesco Ciompi <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
 
     <h4 class="person-title"><small>Assistant Professor</small></h4>
 
