--- a/vacancies/dl-prediction-recurrence-tnbc/index.html
+++ b/vacancies/dl-prediction-recurrence-tnbc/index.html
@@ -303,7 +303,10 @@ Is it possible to predict recurrence for TNBC based on morphological features?</
 
     <a href="https://www.computationalpathologygroup.eu/members/maschenka-balkenhol/"><img data-src="https://beta.diagnijmegen.nl/images/people/Maschenka_Balkenhol-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Maschenka Balkenhol"></a>
 
-    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/maschenka-balkenhol/">Maschenka Balkenhol <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/maschenka-balkenhol/">
+      Maschenka Balkenhol
+      <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small>
+    </a></h3>
 
     <h4 class="person-title"><small>Pathology resident and PhD student</small></h4>
 
