--- a/software/cirrus/index.html
+++ b/software/cirrus/index.html
@@ -278,11 +278,12 @@ The workstation is based on the MeVisLab software platform and is available thro
 
     <a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/"><img data-src="https://beta.diagnijmegen.nl/images/people/Haimasree_Bhattacharya-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Haimasree Bhattacharya"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/">Haimasree Bhattacharya <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/">
+      Haimasree Bhattacharya
+    </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -290,11 +291,12 @@ The workstation is based on the MeVisLab software platform and is available thro
 
     <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">Paul Konstantin Gerke <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">
+      Paul Konstantin Gerke
+    </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -302,11 +304,12 @@ The workstation is based on the MeVisLab software platform and is available thro
 
     <a href="https://beta.diagnijmegen.nl/members/colin-jacobs/"><img data-src="https://beta.diagnijmegen.nl/images/people/Colin_Jacobs-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Colin Jacobs"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/colin-jacobs/">Colin Jacobs <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/colin-jacobs/">
+      Colin Jacobs
+    </a></h3>
 
     <h4 class="person-title"><small>Assistant Professor / Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -314,11 +317,12 @@ The workstation is based on the MeVisLab software platform and is available thro
 
     <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">James Meakin <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">
+      James Meakin
+    </a></h3>
 
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
         </div>
     </div>
