--- a/software/cirruslungs/index.html
+++ b/software/cirruslungs/index.html
@@ -313,11 +313,12 @@ the case and proceeds with the next one.
 
     <a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/"><img data-src="https://beta.diagnijmegen.nl/images/people/Haimasree_Bhattacharya-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Haimasree Bhattacharya"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/">Haimasree Bhattacharya <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/haimasree-bhattacharya/">
+      Haimasree Bhattacharya
+    </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -325,11 +326,12 @@ the case and proceeds with the next one.
 
     <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">Paul Konstantin Gerke <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">
+      Paul Konstantin Gerke
+    </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -337,11 +339,12 @@ the case and proceeds with the next one.
 
     <a href="https://beta.diagnijmegen.nl/members/joep-kamps/"><img data-src="https://beta.diagnijmegen.nl/images/people/Joep_Kamps-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Joep Kamps"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/joep-kamps/">Joep Kamps <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/joep-kamps/">
+      Joep Kamps
+    </a></h3>
 
     <h4 class="person-title"><small>Data Manager</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -349,11 +352,12 @@ the case and proceeds with the next one.
 
     <a href="https://beta.diagnijmegen.nl/members/colin-jacobs/"><img data-src="https://beta.diagnijmegen.nl/images/people/Colin_Jacobs-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Colin Jacobs"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/colin-jacobs/">Colin Jacobs <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/colin-jacobs/">
+      Colin Jacobs
+    </a></h3>
 
     <h4 class="person-title"><small>Assistant Professor / Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 
@@ -366,11 +370,12 @@ the case and proceeds with the next one.
 
     <a href="https://beta.diagnijmegen.nl/members/bram_van_ginneken/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bram_van_Ginneken-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bram van Ginneken"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bram_van_ginneken/">Bram van Ginneken <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bram_van_ginneken/">
+      Bram van Ginneken
+    </a></h3>
 
     <h4 class="person-title"><small>Professor</small></h4>
 
-      <p class='text-muted'></p>
 </div>
         </div>
     </div>
