--- a/software/grand-challenge/index.html
+++ b/software/grand-challenge/index.html
@@ -295,11 +295,12 @@
 
     <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">James Meakin <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">
+      James Meakin
+    </a></h3>
 
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -307,11 +308,12 @@
 
     <a href="https://beta.diagnijmegen.nl/members/sjoerd-kerkstra/"><img data-src="https://beta.diagnijmegen.nl/images/people/Sjoerd_Kerkstra-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Sjoerd Kerkstra"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/sjoerd-kerkstra/">Sjoerd Kerkstra <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/sjoerd-kerkstra/">
+      Sjoerd Kerkstra
+    </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -319,11 +321,12 @@
 
     <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">Paul Konstantin Gerke <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/">
+      Paul Konstantin Gerke
+    </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -331,11 +334,12 @@
 
     <a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/"><img data-src="https://beta.diagnijmegen.nl/images/people/Harm_van_Zeeland-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Harm van Zeeland"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/">Harm van Zeeland <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/">
+      Harm van Zeeland
+    </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -343,11 +347,12 @@
 
     <a href="https://beta.diagnijmegen.nl/members/karel-gerbrands/"><img data-src="https://beta.diagnijmegen.nl/images/people/Karel_Gerbrands-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Karel Gerbrands"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/karel-gerbrands/">Karel Gerbrands <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/karel-gerbrands/">
+      Karel Gerbrands
+    </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-      <p class='text-muted'></p>
 </div>
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
@@ -355,11 +360,12 @@
 
     <a href="https://beta.diagnijmegen.nl/members/bram_van_ginneken/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bram_van_Ginneken-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bram van Ginneken"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bram_van_ginneken/">Bram van Ginneken <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/bram_van_ginneken/">
+      Bram van Ginneken
+    </a></h3>
 
     <h4 class="person-title"><small>Professor</small></h4>
 
-      <p class='text-muted'></p>
 </div>
         </div>
     </div>
