--- a/vacancies/postdoctoral-researcher-deep-learning/index.html
+++ b/vacancies/postdoctoral-researcher-deep-learning/index.html
@@ -290,7 +290,10 @@
 
     <a href="https://www.computationalpathologygroup.eu/members/francesco-ciompi/"><img data-src="https://beta.diagnijmegen.nl/images/people/Francesco_Ciompi-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Francesco Ciompi"></a>
 
-    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/francesco-ciompi/">Francesco Ciompi <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/francesco-ciompi/">
+      Francesco Ciompi
+      <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small>
+    </a></h3>
 
     <h4 class="person-title"><small>Assistant Professor</small></h4>
 
@@ -300,7 +303,10 @@
 
     <a href="https://www.computationalpathologygroup.eu/members/jeroen-van-der-laak/"><img data-src="https://beta.diagnijmegen.nl/images/people/Jeroen_van_der_Laak-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Jeroen van der Laak"></a>
 
-    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/jeroen-van-der-laak/">Jeroen van der Laak <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/jeroen-van-der-laak/">
+      Jeroen van der Laak
+      <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small>
+    </a></h3>
 
     <h4 class="person-title"><small>Associate professor/Group leader</small></h4>
 
