--- a/vacancies/research-software-engineer-digital-pathology/index.html
+++ b/vacancies/research-software-engineer-digital-pathology/index.html
@@ -293,7 +293,10 @@
 
     <a href="https://www.computationalpathologygroup.eu/members/jeroen-van-der-laak/"><img data-src="https://beta.diagnijmegen.nl/images/people/Jeroen_van_der_Laak-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Jeroen van der Laak"></a>
 
-    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/jeroen-van-der-laak/">Jeroen van der Laak <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/jeroen-van-der-laak/">
+      Jeroen van der Laak
+      <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small>
+    </a></h3>
 
     <h4 class="person-title"><small>Associate professor/Group leader</small></h4>
 
@@ -303,7 +306,10 @@
 
     <a href="https://www.computationalpathologygroup.eu/members/geert-litjens/"><img data-src="https://beta.diagnijmegen.nl/images/people/Geert_Litjens-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Geert Litjens"></a>
 
-    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/geert-litjens/">Geert Litjens <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/geert-litjens/">
+      Geert Litjens
+      <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small>
+    </a></h3>
 
     <h4 class="person-title"><small>Assistant professor</small></h4>
 
@@ -313,7 +319,10 @@
 
     <a href="https://www.computationalpathologygroup.eu/members/francesco-ciompi/"><img data-src="https://beta.diagnijmegen.nl/images/people/Francesco_Ciompi-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Francesco Ciompi"></a>
 
-    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/francesco-ciompi/">Francesco Ciompi <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small></a></h3>
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/francesco-ciompi/">
+      Francesco Ciompi
+      <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small>
+    </a></h3>
 
     <h4 class="person-title"><small>Assistant Professor</small></h4>
 
@@ -323,7 +332,9 @@
 
     <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">James Meakin </small></a></h3>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/james-meakin/">
+      James Meakin
+    </a></h3>
 
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 
