Pushing new version of website-diag

--- a/members/index.html
+++ b/members/index.html
@@ -273,7 +273,8 @@ This page is generated automatically. Please do not change the content of this p
 
     <h4 class="person-title"><small>Professor</small></h4>
 
-</div>
+</div>                    </div>
+
                     <h1 class="text-muted">Faculty</h1>
                     <div class="row people-grid">
 
