Pushing new version of website-diag

--- a/members/mart-van-rijthoven/index.html
+++ b/members/mart-van-rijthoven/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://beta.diagnijmegen.nl/members/mart-van-rijthoven/">
+    <link rel="canonical" href="https://www.computationalpathologygroup.eu/members/mart-van-rijthoven/">
 
 
     <title>Mart van Rijthoven - Diagnostic Image Analysis Group</title>
