--- a/members/caner-mercan/index.html
+++ b/members/caner-mercan/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://beta.diagnijmegen.nl/members/caner-mercan/">
+    <link rel="canonical" href="https://www.computationalpathologygroup.eu/members/caner-mercan/">
 
 
     <title>Caner Mercan - Diagnostic Image Analysis Group</title>
