--- a/members/cristina-gonzalez-gonzalo/index.html
+++ b/members/cristina-gonzalez-gonzalo/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://beta.diagnijmegen.nl/members/cristina-gonzalez-gonzalo/">
+    <link rel="canonical" href="https://beta.diagnijmegen.nl/members/cristina-gonzález-gonzalo/">
 
 
     <title>Cristina González-Gonzalo - Diagnostic Image Analysis Group</title>
