--- a/members/jim-winkens/index.html
+++ b/members/jim-winkens/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://beta.diagnijmegen.nl/members/jim-winkens/">
+    <link rel="canonical" href="https://www.computationalpathologygroup.eu/members/jim-winkens/">
 
 
     <title>Jim Winkens - Diagnostic Image Analysis Group</title>
