Pushing new version of website-diag

--- a/members/index.html
+++ b/members/index.html
@@ -729,7 +729,7 @@ This page is generated automatically. Please do not change the content of this p
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/wouter-bulten/"><img data-src="https://beta.diagnijmegen.nl/images/Wouter_Bulten.png" class="img-thumbnail rounded-circle lazyload" alt="Wouter Bulten"></a>
+    <a href="https://beta.diagnijmegen.nl/members/wouter-bulten/"><img data-src="https://beta.diagnijmegen.nl/images/people/Wouter_Bulten-160.png" class="img-thumbnail rounded-circle lazyload" alt="Wouter Bulten"></a>
 
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/wouter-bulten/">
       Wouter Bulten
