Pushing new version of website-diag

--- a/publications/index.html
+++ b/publications/index.html
@@ -1894,6 +1894,10 @@
         <!-- Getting list of pub_type -->
         <!-- Getting list of years -->
         <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
 
     <!-- Inpress keys should go here. To include "Accepted or to appear" section -->
 
@@ -1967,6 +1971,8 @@
 
                         <li>G. Litjens, F. Ciompi, J.M. Wolterink, B.D. de Vos, T. Leiner, J. Teuwen and I. Išgum. "State-of-the-Art Deep Learning in Cardiovascular Image Analysis.", <i>JACC Cardiovascular Imaging</i> 2019;12:1549-1565. <a href="https://beta.diagnijmegen.nl/publications/litj19/">Abstract</a> <a href="https://doi.org/10.1016/j.jcmg.2019.06.009">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/31395244/">PMID</a></li>
 
+                        <li>M. Hermsen, T. de Bel, M. den Boer, E.J. Steenbergen, J. Kers, S. Florquin, J.J.T.H. Roelofs, M.D. Stegall, M.P. Alexander, B.H. Smith, B. Smeets, L.B. Hilbrands and J.A.W.M. van der Laak. "Deep-learning based histopathological assessment of kidney tissue", <i>Journal of the American Society of Nephrology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/herm19/">Abstract</a></li>
+
                     </ul>
                                 <h3>Papers in conference proceedings</h3>
                             <ul>
@@ -2007,10 +2013,12 @@
 
                         <li>W. Bulten, H. Pinckaers, H. van Boven, R. Vink, T. de Bel, B. van Ginneken, J. van der Laak, C. Hulsbergen-van de Kaa and G. Litjens. "Automated Gleason Grading of Prostate Biopsies using Deep Learning", <i>arXiv:1907.07980</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/bult19b/">Abstract</a> <a href="https://arxiv.org/abs/1907.07980/">arXiv</a> <a href="https://arxiv.org/abs/1907.07980/">arXiv</a></li>
 
+                        <li>B. Liefers, J.M. Colijn, C. González-Gonzalo, T. Verzijden, P. Mitchell, C.B. Hoyng, B. van Ginneken, C.C. Klaver and C.I. Sánchez. "A deep learning model for segmentation of geographic atrophy to study its long-term natural history", <i>arXiv:1908.05621</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/lief19b/">Abstract</a> <a href="https://arxiv.org/abs/1908.05621/">arXiv</a> <a href="https://arxiv.org/abs/1908.05621/">arXiv</a></li>
+
                     </ul>
                                 <h3>Abstracts</h3>
                             <ul>
-                        <li>J. Bokhorst, H. Dawson, A. Blank, I. Zlobec, A. Lugli, M. Vieth, R. Kirsch, M. Urbanowicz, S. Brockmoeller, J. Flejou, L. Rijstenberg, J. van der Laak, F. Ciompi and I. Nagtegaal. "Assessment of tumor buds in colorectal cancer. A large-scale international digital observer study.", in: <i>European Congres of Pathology</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/bokh19a/">Abstract</a></li>
+                        <li>J. Bokhorst, H. Dawson, A. Blank, I. Zlobec, A. Lugli, M. Vieth, R. Kirsch, M. Urbanowicz, S. Brockmoeller, J. Flejou, L. Rijstenberg, J. van der Laak, F. Ciompi and I. Nagtegaal. "Assessment of tumor buds in colorectal cancer. A large-scale international digital observer study", in: <i>European Congress of Pathology</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/bokh19a/">Abstract</a></li>
 
                         <li>W. Bulten, H. Pinckaers, C. Hulsbergen-van de Kaa and G. Litjens. "Automated Gleason Grading of Prostate Biopsies Using Deep Learning", in: <i>United States and Canadian Academy of Pathology (USCAP) 108th Annual Meeting</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/bult19a/">Abstract</a></li>
 
