--- a/publications/bram-van-ginneken/index.html
+++ b/publications/bram-van-ginneken/index.html
@@ -308,6 +308,8 @@
 
                         <li>A.L. Simpson, M. Antonelli, S. Bakas, M. Bilello, K. Farahani, B. van Ginneken, A. Kopp-Schneider, B.A. Landman, G. Litjens, B. Menze, O. Ronneberger, R.M. Summers, P. Bilic, P.F. Christ, R.K. G. Do, M. Gollub, J. Golia-Pernicka, S.H. Heckers, W.R. Jarnagin, M.K. McHugo, S. Napel, E. Vorontsov, L. Maier-Hein and M. Jorge Cardoso. "A large annotated medical image dataset for the development and evaluation of segmentation algorithms", <i>arXiv:1902.09063</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/simp19/">Abstract</a> <a href="https://arxiv.org/pdf/1902.09063.pdf/">arXiv</a> <a href="https://arxiv.org/abs/1902.09063/">arXiv</a></li>
 
+                        <li>B. Liefers, J.M. Colijn, C. González-Gonzalo, T. Verzijden, P. Mitchell, C.B. Hoyng, B. van Ginneken, C.C. Klaver and C.I. Sánchez. "A deep learning model for segmentation of geographic atrophy to study its long-term natural history", <i>arXiv:1908.05621</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/lief19b/">Abstract</a> <a href="https://arxiv.org/abs/1908.05621/">arXiv</a> <a href="https://arxiv.org/abs/1908.05621/">arXiv</a></li>
+
                     </ul>
                                 <h3>Abstracts</h3>
                             <ul>
