--- a/publications/jeroen-van-der-laak/index.html
+++ b/publications/jeroen-van-der-laak/index.html
@@ -274,6 +274,8 @@
 
                         <li>D. Tellez, G. Litjens, J. van der Laak and F. Ciompi. "Neural Image Compression for Gigapixel Histopathology Image Analysis", <i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/tell19/">Abstract</a></li>
 
+                        <li>M. Hermsen, T. de Bel, M. den Boer, E.J. Steenbergen, J. Kers, S. Florquin, J.J.T.H. Roelofs, M.D. Stegall, M.P. Alexander, B.H. Smith, B. Smeets, L.B. Hilbrands and J.A.W.M. van der Laak. "Deep-learning based histopathological assessment of kidney tissue", <i>Journal of the American Society of Nephrology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/herm19/">Abstract</a></li>
+
                     </ul>
                                 <h3>Papers in conference proceedings</h3>
                             <ul>
@@ -286,7 +288,7 @@
                     </ul>
                                 <h3>Abstracts</h3>
                             <ul>
-                        <li>J. Bokhorst, H. Dawson, A. Blank, I. Zlobec, A. Lugli, M. Vieth, R. Kirsch, M. Urbanowicz, S. Brockmoeller, J. Flejou, L. Rijstenberg, J. van der Laak, F. Ciompi and I. Nagtegaal. "Assessment of tumor buds in colorectal cancer. A large-scale international digital observer study.", in: <i>European Congres of Pathology</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/bokh19a/">Abstract</a></li>
+                        <li>J. Bokhorst, H. Dawson, A. Blank, I. Zlobec, A. Lugli, M. Vieth, R. Kirsch, M. Urbanowicz, S. Brockmoeller, J. Flejou, L. Rijstenberg, J. van der Laak, F. Ciompi and I. Nagtegaal. "Assessment of tumor buds in colorectal cancer. A large-scale international digital observer study", in: <i>European Congress of Pathology</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/bokh19a/">Abstract</a></li>
 
                     </ul>
                             <h2>2018</h2>
