Pushing new version of website-diag

--- a/publications/sanc11/index.html
+++ b/publications/sanc11/index.html
@@ -255,7 +255,7 @@
     <h1 class="page-title">Evaluation of a Computer-Aided Diagnosis system for Diabetic Retinopathy screening on public data</h1>
 
     <p class="lead">
-            C. I Sánchez,             M. Niemeijer,             A. V Dumitrescu,             M. S A Suttorp-Schulten,             M. D Abràmoff and B. van Ginneken    </p>
+            C.I. Sánchez,             M. Niemeijer,             A. V Dumitrescu,             M. S A Suttorp-Schulten,             M. D Abràmoff and B. van Ginneken    </p>
 
     <p><i>Investigative Ophthalmology and Visual Science</i> 2011;52:4866-4871</p>
     <p>
