Pushing new version of website-diag

--- a/members/mehmet-dalmis/index.html
+++ b/members/mehmet-dalmis/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Mehmet_Dalmis.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Mehmet_Dalmis.jpg">
                 <h1>Mehmet Dalmis</h1>
                 <h2 class="text-muted">PhD candidate</h2>
             </div>
