--- a/members/patrick-brand/index.html
+++ b/members/patrick-brand/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Patrick_Brand.jpg">
                 <h1>Patrick Brand</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
