--- a/members/yiping-jiao/index.html
+++ b/members/yiping-jiao/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Yiping_Jiao.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Yiping_Jiao.jpg">
                 <h1>Yiping Jiao</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
