--- a/members/ajay-patel/index.html
+++ b/members/ajay-patel/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Ajay_Patel_bw.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Ajay_Patel_bw.jpg">
                 <h1>Ajay Patel</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
