--- a/members/david-tellez/index.html
+++ b/members/david-tellez/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/David_Tellez.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/David_Tellez.jpg">
                 <h1>David Tellez</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
