--- a/members/geert-litjens/index.html
+++ b/members/geert-litjens/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Geert_Litjens.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Geert_Litjens.jpg">
                 <h1>Geert Litjens</h1>
                 <h2 class="text-muted">Assistant professor</h2>
             </div>
