--- a/members/jeffrey-hoven/index.html
+++ b/members/jeffrey-hoven/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Jeffrey_Hoven.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Jeffrey_Hoven.jpg">
                 <h1>Jeffrey Hoven</h1>
             </div>
 
