--- a/members/jim-winkens/index.html
+++ b/members/jim-winkens/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Jim_Winkens-480.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Jim_Winkens.jpg">
                 <h1>Jim Winkens</h1>
             </div>
 
