--- a/members/maud-wekking/index.html
+++ b/members/maud-wekking/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Maud_Wekking.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Maud_Wekking.jpg">
                 <h1>Maud Wekking</h1>
                 <h2 class="text-muted">Research technician</h2>
             </div>
