--- a/members/michel-kok/index.html
+++ b/members/michel-kok/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Michel_Kok.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Michel_Kok.jpg">
                 <h1>Michel Kok</h1>
                 <h2 class="text-muted">Master student</h2>
             </div>
