--- a/members/midas-meijs/index.html
+++ b/members/midas-meijs/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Midas_Meijs.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Midas_Meijs.jpg">
                 <h1>Midas Meijs</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
