--- a/members/peter-bandi/index.html
+++ b/members/peter-bandi/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Péter_Bándi-480.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Péter_Bándi.jpg">
                 <h1>Péter Bándi</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
