--- a/members/rita-bylsma/index.html
+++ b/members/rita-bylsma/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Person.png">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Person.png">
                 <h1>Rita Bylsma</h1>
                 <h2 class="text-muted">Research Software Engineer</h2>
             </div>
