--- a/members/sven-lafebre/index.html
+++ b/members/sven-lafebre/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Sven_Lafebre.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Sven_Lafebre.jpg">
                 <h1>Sven Lafebre</h1>
             </div>
 
