--- a/members/thomas-de-bel/index.html
+++ b/members/thomas-de-bel/index.html
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Thomas_de_Bel.jpg">
                 <h1>Thomas de Bel</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
