Pushing new version of website-diag

--- a/members/patrick-brand/index.html
+++ b/members/patrick-brand/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Patrick Brand is a PhD student at the Department of Radiology of Radboud university medical center, Nijmegen. He studied Computer Science at Delft University of Technology. In January 2019 he...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Patrick_Brand.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Patrick_Brand.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Patrick Brand - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Patrick Brand is a PhD student at the Department of Radiology of Radboud university medical center, Nijmegen. He studied Computer Science at Delft University of Technology. In January 2019 he...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Patrick_Brand.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Patrick_Brand.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Patrick Brand - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Patrick Brand is a PhD student at the Department of Radiology of Radboud university medical center, Nijmegen. He studied Computer Science at Delft University of Technology. In January 2019 he...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Patrick_Brand.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Patrick_Brand.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Patrick Brand - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Patrick Brand is a PhD student at the Department of Radiology of Radboud university medical center, Nijmegen. He studied Computer Science at Delft University of Technology. In January 2019 he...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Patrick_Brand.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Patrick_Brand.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Patrick_Brand.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand.jpg">
                 <h1>Patrick Brand</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
