--- a/members/thomas-de-bel/index.html
+++ b/members/thomas-de-bel/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Thomas de Bel completed his masters in Data Science at the Radboud University in Nijmegen. For his thesis he worked on applying deep learning systems to analyse and segment stuctures of...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Thomas_de_Bel.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Thomas de Bel - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Thomas de Bel completed his masters in Data Science at the Radboud University in Nijmegen. For his thesis he worked on applying deep learning systems to analyse and segment stuctures of...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Thomas_de_Bel.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Thomas de Bel - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Thomas de Bel completed his masters in Data Science at the Radboud University in Nijmegen. For his thesis he worked on applying deep learning systems to analyse and segment stuctures of...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Thomas_de_Bel.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Thomas de Bel - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Thomas de Bel completed his masters in Data Science at the Radboud University in Nijmegen. For his thesis he worked on applying deep learning systems to analyse and segment stuctures of...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Thomas_de_Bel.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Thomas_de_Bel.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg">
                 <h1>Thomas de Bel</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
