--- a/members/caner-mercan/index.html
+++ b/members/caner-mercan/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Caner Mercan is a postdoctoral researcher at the Diagnostic Image Analysis Group and the Digital Pathology group of Radboud university medical center, Nijmegen. He received his Master's degree in...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Caner_Mercan.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Caner_Mercan.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Caner Mercan - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Caner Mercan is a postdoctoral researcher at the Diagnostic Image Analysis Group and the Digital Pathology group of Radboud university medical center, Nijmegen. He received his Master's degree in...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Caner_Mercan.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Caner_Mercan.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Caner Mercan - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Caner Mercan is a postdoctoral researcher at the Diagnostic Image Analysis Group and the Digital Pathology group of Radboud university medical center, Nijmegen. He received his Master's degree in...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Caner_Mercan.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Caner_Mercan.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Caner Mercan - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Caner Mercan is a postdoctoral researcher at the Diagnostic Image Analysis Group and the Digital Pathology group of Radboud university medical center, Nijmegen. He received his Master's degree in...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Caner_Mercan.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Caner_Mercan.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Caner_Mercan.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Caner_Mercan.jpg">
                 <h1>Caner Mercan</h1>
                 <h2 class="text-muted">Postdoctoral researcher</h2>
             </div>
