--- a/members/clarisa-sanchez/index.html
+++ b/members/clarisa-sanchez/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Clarisa Sánchez is Associate Professor at Radboud University Medical Center. She graduated in Telecommunication Engineering at the University of Valladolid, Spain. In 2008, she obtained her Ph.D....">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Clarisa_Sánchez.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Clarisa Sánchez - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Clarisa Sánchez is Associate Professor at Radboud University Medical Center. She graduated in Telecommunication Engineering at the University of Valladolid, Spain. In 2008, she obtained her Ph.D....">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Clarisa_Sánchez.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Clarisa Sánchez - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Clarisa Sánchez is Associate Professor at Radboud University Medical Center. She graduated in Telecommunication Engineering at the University of Valladolid, Spain. In 2008, she obtained her Ph.D....">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Clarisa_Sánchez.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Clarisa Sánchez - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Clarisa Sánchez is Associate Professor at Radboud University Medical Center. She graduated in Telecommunication Engineering at the University of Valladolid, Spain. In 2008, she obtained her Ph.D....">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Clarisa_Sánchez.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Clarisa_Sánchez.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg">
                 <h1>Clarisa Sánchez</h1>
                 <h2 class="text-muted">Associate professor</h2>
             </div>
