--- a/members/david-tellez/index.html
+++ b/members/david-tellez/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="David Tellez graduated in Telecommunication Engineering at the University of Seville in 2014. During his Master's studies he was involved in the Robotics, Vision and Control Research Group as a...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/David_Tellez.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/David_Tellez.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="David Tellez - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="David Tellez graduated in Telecommunication Engineering at the University of Seville in 2014. During his Master's studies he was involved in the Robotics, Vision and Control Research Group as a...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/David_Tellez.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/David_Tellez.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="David Tellez - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="David Tellez graduated in Telecommunication Engineering at the University of Seville in 2014. During his Master's studies he was involved in the Robotics, Vision and Control Research Group as a...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/David_Tellez.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/David_Tellez.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="David Tellez - Diagnostic Image Analysis Group">
     <meta property="og:description" content="David Tellez graduated in Telecommunication Engineering at the University of Seville in 2014. During his Master's studies he was involved in the Robotics, Vision and Control Research Group as a...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/David_Tellez.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/David_Tellez.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/David_Tellez.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/David_Tellez.jpg">
                 <h1>David Tellez</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
