--- a/members/geert-litjens/index.html
+++ b/members/geert-litjens/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Geert Litjens studied Biomedical Engineering at Eindhoven University of Technology. Subsequently, he completed his PhD in the Diagnostic Image Analysis Group. He worked with Henkjan Huisman on...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Geert_Litjens.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Geert_Litjens.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Geert Litjens - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Geert Litjens studied Biomedical Engineering at Eindhoven University of Technology. Subsequently, he completed his PhD in the Diagnostic Image Analysis Group. He worked with Henkjan Huisman on...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Geert_Litjens.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Geert_Litjens.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Geert Litjens - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Geert Litjens studied Biomedical Engineering at Eindhoven University of Technology. Subsequently, he completed his PhD in the Diagnostic Image Analysis Group. He worked with Henkjan Huisman on...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Geert_Litjens.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Geert_Litjens.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Geert Litjens - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Geert Litjens studied Biomedical Engineering at Eindhoven University of Technology. Subsequently, he completed his PhD in the Diagnostic Image Analysis Group. He worked with Henkjan Huisman on...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Geert_Litjens.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Geert_Litjens.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Geert_Litjens.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Geert_Litjens.jpg">
                 <h1>Geert Litjens</h1>
                 <h2 class="text-muted">Assistant professor</h2>
             </div>
