--- a/members/james-meakin/index.html
+++ b/members/james-meakin/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="James Meakin leads the Research Software Engineering team of the Diagnostic Image Analysis Group. The RSE team provides tools, advice and training on how to develop scientific software, and is...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/James_Meakin.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/James_Meakin.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="James Meakin - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="James Meakin leads the Research Software Engineering team of the Diagnostic Image Analysis Group. The RSE team provides tools, advice and training on how to develop scientific software, and is...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/James_Meakin.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/James_Meakin.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="James Meakin - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="James Meakin leads the Research Software Engineering team of the Diagnostic Image Analysis Group. The RSE team provides tools, advice and training on how to develop scientific software, and is...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/James_Meakin.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/James_Meakin.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="James Meakin - Diagnostic Image Analysis Group">
     <meta property="og:description" content="James Meakin leads the Research Software Engineering team of the Diagnostic Image Analysis Group. The RSE team provides tools, advice and training on how to develop scientific software, and is...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/James_Meakin.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/James_Meakin.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/James_Meakin.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/James_Meakin.jpg">
                 <h1>James Meakin</h1>
                 <h2 class="text-muted">Lead Research Software Engineer</h2>
             </div>
