--- a/members/jeffrey-hoven/index.html
+++ b/members/jeffrey-hoven/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Jeffrey Hoven worked until February 2018 as a research technician in the CP group, supervised by Geert Litjens. He studied to be a biological-medical laboratory technician (MLO) at Rijnijssel and...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Jeffrey_Hoven.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Jeffrey_Hoven.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Jeffrey Hoven - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Jeffrey Hoven worked until February 2018 as a research technician in the CP group, supervised by Geert Litjens. He studied to be a biological-medical laboratory technician (MLO) at Rijnijssel and...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Jeffrey_Hoven.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Jeffrey_Hoven.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Jeffrey Hoven - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Jeffrey Hoven worked until February 2018 as a research technician in the CP group, supervised by Geert Litjens. He studied to be a biological-medical laboratory technician (MLO) at Rijnijssel and...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Jeffrey_Hoven.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Jeffrey_Hoven.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Jeffrey Hoven - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Jeffrey Hoven worked until February 2018 as a research technician in the CP group, supervised by Geert Litjens. He studied to be a biological-medical laboratory technician (MLO) at Rijnijssel and...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Jeffrey_Hoven.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Jeffrey_Hoven.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Jeffrey_Hoven.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Jeffrey_Hoven.jpg">
                 <h1>Jeffrey Hoven</h1>
             </div>
 
