--- a/members/jim-winkens/index.html
+++ b/members/jim-winkens/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Jim Winkens was a master student in the CP group until February 2019. He succesfully defended his master thesis titled 'Out-of-distribution detection for computational pathology with multi-head...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Jim_Winkens.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Jim_Winkens.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Jim Winkens - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Jim Winkens was a master student in the CP group until February 2019. He succesfully defended his master thesis titled 'Out-of-distribution detection for computational pathology with multi-head...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Jim_Winkens.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Jim_Winkens.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Jim Winkens - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Jim Winkens was a master student in the CP group until February 2019. He succesfully defended his master thesis titled 'Out-of-distribution detection for computational pathology with multi-head...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Jim_Winkens.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Jim_Winkens.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Jim Winkens - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Jim Winkens was a master student in the CP group until February 2019. He succesfully defended his master thesis titled 'Out-of-distribution detection for computational pathology with multi-head...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Jim_Winkens.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Jim_Winkens.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Jim_Winkens.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Jim_Winkens-480.jpg">
                 <h1>Jim Winkens</h1>
             </div>
 
