--- a/members/jonas-teuwen/index.html
+++ b/members/jonas-teuwen/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Jonas Teuwen is a tenure-track researcher in the Department of Radiology and Nuclear Medicine of the Radboud University Medical Center. Previously, after his studies in Applied Mathematics at the...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Jonas_Teuwen.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Jonas Teuwen - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Jonas Teuwen is a tenure-track researcher in the Department of Radiology and Nuclear Medicine of the Radboud University Medical Center. Previously, after his studies in Applied Mathematics at the...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Jonas_Teuwen.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Jonas Teuwen - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Jonas Teuwen is a tenure-track researcher in the Department of Radiology and Nuclear Medicine of the Radboud University Medical Center. Previously, after his studies in Applied Mathematics at the...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Jonas_Teuwen.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Jonas Teuwen - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Jonas Teuwen is a tenure-track researcher in the Department of Radiology and Nuclear Medicine of the Radboud University Medical Center. Previously, after his studies in Applied Mathematics at the...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Jonas_Teuwen.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Jonas_Teuwen.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen.jpg">
                 <h1>Jonas Teuwen</h1>
                 <h2 class="text-muted">Assistant professor</h2>
             </div>
