--- a/members/marcel-oei/index.html
+++ b/members/marcel-oei/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Marcel Oei studied medicine at the Erasmus MC/Erasmus University Rotterdam. In March 2010 he started his PhD project at the department of Radiology of the Radboud university medical center. His...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Marcel_Oei_bw.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Marcel_Oei_bw.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Marcel Oei - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Marcel Oei studied medicine at the Erasmus MC/Erasmus University Rotterdam. In March 2010 he started his PhD project at the department of Radiology of the Radboud university medical center. His...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Marcel_Oei_bw.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Marcel_Oei_bw.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Marcel Oei - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Marcel Oei studied medicine at the Erasmus MC/Erasmus University Rotterdam. In March 2010 he started his PhD project at the department of Radiology of the Radboud university medical center. His...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Marcel_Oei_bw.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Marcel_Oei_bw.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Marcel Oei - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Marcel Oei studied medicine at the Erasmus MC/Erasmus University Rotterdam. In March 2010 he started his PhD project at the department of Radiology of the Radboud university medical center. His...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Marcel_Oei_bw.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Marcel_Oei_bw.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Marcel_Oei_bw.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Marcel_Oei_bw.jpg">
                 <h1>Marcel Oei</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
