--- a/members/maud-wekking/index.html
+++ b/members/maud-wekking/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Maud Wekking is a research technician in the Computational Pathology Group since September 2018. She studied Biological and Medical Laboratory Research, with a specialization in...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Maud_Wekking.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Maud_Wekking.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Maud Wekking - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Maud Wekking is a research technician in the Computational Pathology Group since September 2018. She studied Biological and Medical Laboratory Research, with a specialization in...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Maud_Wekking.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Maud_Wekking.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Maud Wekking - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Maud Wekking is a research technician in the Computational Pathology Group since September 2018. She studied Biological and Medical Laboratory Research, with a specialization in...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Maud_Wekking.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Maud_Wekking.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Maud Wekking - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Maud Wekking is a research technician in the Computational Pathology Group since September 2018. She studied Biological and Medical Laboratory Research, with a specialization in...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Maud_Wekking.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Maud_Wekking.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Maud_Wekking.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Maud_Wekking.jpg">
                 <h1>Maud Wekking</h1>
                 <h2 class="text-muted">Research technician</h2>
             </div>
