--- a/members/mehmet-dalmis/index.html
+++ b/members/mehmet-dalmis/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Mehmet U. Dalmis is a PhD candidate at the Diagnostic Image Analysis Group of the Radboud university medical center since May, 2013. He is working on multimodal imaging for breast cancer,...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Mehmet_Dalmis.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Mehmet_Dalmis.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Mehmet Dalmis - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Mehmet U. Dalmis is a PhD candidate at the Diagnostic Image Analysis Group of the Radboud university medical center since May, 2013. He is working on multimodal imaging for breast cancer,...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Mehmet_Dalmis.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Mehmet_Dalmis.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Mehmet Dalmis - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Mehmet U. Dalmis is a PhD candidate at the Diagnostic Image Analysis Group of the Radboud university medical center since May, 2013. He is working on multimodal imaging for breast cancer,...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Mehmet_Dalmis.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Mehmet_Dalmis.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Mehmet Dalmis - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Mehmet U. Dalmis is a PhD candidate at the Diagnostic Image Analysis Group of the Radboud university medical center since May, 2013. He is working on multimodal imaging for breast cancer,...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Mehmet_Dalmis.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Mehmet_Dalmis.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Mehmet_Dalmis.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Mehmet_Dalmis.jpg">
                 <h1>Mehmet Dalmis</h1>
                 <h2 class="text-muted">PhD candidate</h2>
             </div>
