--- a/members/midas-meijs/index.html
+++ b/members/midas-meijs/index.html
@@ -13,24 +13,24 @@
 
     <!-- Search Engine -->
     <meta name="description" content="Midas Meijs studied Biomedical Engineering (BSc) and Medical Engineering (MSc) at Eindhoven University of Technology (TU/e). In June 2015 he joined the Diagnostic Image Analysis Group as a PhD...">
-    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Midas_Meijs.jpg">
+    <meta name="image" content="https://beta.diagnijmegen.nl/images/people/people/Midas_Meijs.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Midas Meijs - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="Midas Meijs studied Biomedical Engineering (BSc) and Medical Engineering (MSc) at Eindhoven University of Technology (TU/e). In June 2015 he joined the Diagnostic Image Analysis Group as a PhD...">
-    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Midas_Meijs.jpg">
+    <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/people/Midas_Meijs.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Midas Meijs - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="Midas Meijs studied Biomedical Engineering (BSc) and Medical Engineering (MSc) at Eindhoven University of Technology (TU/e). In June 2015 he joined the Diagnostic Image Analysis Group as a PhD...">
     <meta name="twitter:creator" content="@diagnijmegen">
-    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Midas_Meijs.jpg">
+    <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/people/Midas_Meijs.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Midas Meijs - Diagnostic Image Analysis Group">
     <meta property="og:description" content="Midas Meijs studied Biomedical Engineering (BSc) and Medical Engineering (MSc) at Eindhoven University of Technology (TU/e). In June 2015 he joined the Diagnostic Image Analysis Group as a PhD...">
-    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Midas_Meijs.jpg">
+    <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/people/Midas_Meijs.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
 
@@ -256,7 +256,7 @@
     <div class="row">
         <div class="col-md-4 person-single-column">
             <div class="person">
-                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/Midas_Meijs.jpg">
+                <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Midas_Meijs.jpg">
                 <h1>Midas Meijs</h1>
                 <h2 class="text-muted">PhD student</h2>
             </div>
