Pushing new version of website-diag

--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -280,7 +280,7 @@
 <h2>Information</h2>
 <ul>
 <li>Project duration: 6-9 months</li>
-<li>Location: Radboud University Nijmegen Medical Centre</li>
+<li>Location: Radboud University Medical Center</li>
 <li>For more information, please contact <a href="http://diagnijmegen.nl/index.php/Person?name=Patrick_Brand">Patrick Brand</a></li>
 </ul>
     </div>
