Pushing new version of website-diag

--- a/software/cirruslungs/index.html
+++ b/software/cirruslungs/index.html
@@ -307,7 +307,6 @@ the case and proceeds with the next one.
     <h2>People</h2>
     <div class="container">
         <div class="row people-grid">
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
@@ -319,9 +318,7 @@ the case and proceeds with the next one.
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
@@ -332,9 +329,7 @@ the case and proceeds with the next one.
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/joep-kamps/"><img data-src="https://beta.diagnijmegen.nl/images/people/Joep_Kamps-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Joep Kamps"></a>
@@ -345,9 +340,7 @@ the case and proceeds with the next one.
 
     <h4 class="person-title"><small>Data Manager</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/colin-jacobs/"><img data-src="https://beta.diagnijmegen.nl/images/people/Colin_Jacobs-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Colin Jacobs"></a>
@@ -358,14 +351,10 @@ the case and proceeds with the next one.
 
     <h4 class="person-title"><small>Assistant Professor / Research Software Engineer</small></h4>
 
-</div>
-
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Mathias Prokop">
     <h3 class="person-name"> Mathias Prokop</h3>
-</div>
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/bram-van-ginneken/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bram_van_Ginneken-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bram van Ginneken"></a>
@@ -376,8 +365,7 @@ the case and proceeds with the next one.
 
     <h4 class="person-title"><small>Professor</small></h4>
 
-</div>
-        </div>
+</div>        </div>
     </div>
 
     </div>
