--- a/software/cirrus/index.html
+++ b/software/cirrus/index.html
@@ -272,7 +272,6 @@ The workstation is based on the MeVisLab software platform and is available thro
     <h2>People</h2>
     <div class="container">
         <div class="row people-grid">
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
@@ -284,9 +283,7 @@ The workstation is based on the MeVisLab software platform and is available thro
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
@@ -297,9 +294,7 @@ The workstation is based on the MeVisLab software platform and is available thro
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/colin-jacobs/"><img data-src="https://beta.diagnijmegen.nl/images/people/Colin_Jacobs-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Colin Jacobs"></a>
@@ -310,9 +305,7 @@ The workstation is based on the MeVisLab software platform and is available thro
 
     <h4 class="person-title"><small>Assistant Professor / Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
@@ -323,8 +316,7 @@ The workstation is based on the MeVisLab software platform and is available thro
 
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 
-</div>
-        </div>
+</div>        </div>
     </div>
 
     </div>
