--- a/software/grand-challenge/index.html
+++ b/software/grand-challenge/index.html
@@ -289,7 +289,6 @@
     <h2>People</h2>
     <div class="container">
         <div class="row people-grid">
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
@@ -301,9 +300,7 @@
 
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/sjoerd-kerkstra/"><img data-src="https://beta.diagnijmegen.nl/images/people/Sjoerd_Kerkstra-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Sjoerd Kerkstra"></a>
@@ -314,9 +311,7 @@
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/paul-konstantin-gerke/"><img data-src="https://beta.diagnijmegen.nl/images/people/Paul_Konstantin_Gerke-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Paul Konstantin Gerke"></a>
@@ -327,9 +322,7 @@
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/harm-van-zeeland/"><img data-src="https://beta.diagnijmegen.nl/images/people/Harm_van_Zeeland-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Harm van Zeeland"></a>
@@ -340,22 +333,20 @@
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/karel-gerbrands/"><img data-src="https://beta.diagnijmegen.nl/images/people/Karel_Gerbrands-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Karel Gerbrands"></a>
+    <a href="https://www.computationalpathologygroup.eu/members/karel-gerbrands/"><img data-src="https://beta.diagnijmegen.nl/images/people/Karel_Gerbrands-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Karel Gerbrands"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/karel-gerbrands/">
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/karel-gerbrands/">
       Karel Gerbrands
+      <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small>
     </a></h3>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+      <p class='text-muted'>Computational Pathology Group</p>
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/bram-van-ginneken/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bram_van_Ginneken-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bram van Ginneken"></a>
@@ -366,8 +357,7 @@
 
     <h4 class="person-title"><small>Professor</small></h4>
 
-</div>
-        </div>
+</div>        </div>
     </div>
 
     </div>
