--- a/software/ophthalmology_workstation/index.html
+++ b/software/ophthalmology_workstation/index.html
@@ -273,7 +273,6 @@
     <h2>People</h2>
     <div class="container">
         <div class="row people-grid">
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
@@ -285,9 +284,7 @@
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/james-meakin/"><img data-src="https://beta.diagnijmegen.nl/images/people/James_Meakin-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="James Meakin"></a>
@@ -298,9 +295,7 @@
 
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/bart-liefers/"><img data-src="https://beta.diagnijmegen.nl/images/people/Bart_Liefers-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Bart Liefers"></a>
@@ -311,23 +306,18 @@
 
     <h4 class="person-title"><small>PhD student</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/clarisa-sanchez/"><img data-src="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg" class="img-thumbnail rounded-circle lazyload" alt="Clarisa Sánchez"></a>
+    <a href="https://beta.diagnijmegen.nl/members/clarisa-sánchez/"><img data-src="https://beta.diagnijmegen.nl/images/people/Clarisa_Sánchez.jpg" class="img-thumbnail rounded-circle lazyload" alt="Clarisa Sánchez"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/clarisa-sanchez/">
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/clarisa-sánchez/">
       Clarisa Sánchez
     </a></h3>
 
     <h4 class="person-title"><small>Associate professor</small></h4>
 
-</div>
-
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Caroline Klaver">
     <h3 class="person-name"> Caroline Klaver</h3>
 </div>        </div>
