--- a/software/sol/index.html
+++ b/software/sol/index.html
@@ -268,7 +268,7 @@ a centralized pool of GPGPUs. It is used to create state-of-the-art tools
 for detecting and classifying illnesses and quantify extent and identify possible
 treatment options for diseases.</p>
 <h2>Capacity/Activity</h2>
-<table class="table table-striped">
+<table class="table-striped table">
 <thead>
 <tr>
 <th>Resource</th>
@@ -333,7 +333,6 @@ built around SOL to other departments of Radboud University in 2019.</p>
     <h2>People</h2>
     <div class="container">
         <div class="row people-grid">
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
@@ -345,9 +344,7 @@ built around SOL to other departments of Radboud University in 2019.</p>
 
     <h4 class="person-title"><small>Research Software Engineer</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/sil-van-de-leemput/"><img data-src="https://beta.diagnijmegen.nl/images/people/Sil_van_de_Leemput-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Sil van de Leemput"></a>
@@ -358,37 +355,29 @@ built around SOL to other departments of Radboud University in 2019.</p>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
-    <a href="https://beta.diagnijmegen.nl/members/thomas-de-bel/"><img data-src="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg" class="img-thumbnail rounded-circle lazyload" alt="Thomas de Bel"></a>
+    <a href="https://www.computationalpathologygroup.eu/members/thomas-de-bel/"><img data-src="https://beta.diagnijmegen.nl/images/people/Thomas_de_Bel.jpg" class="img-thumbnail rounded-circle lazyload" alt="Thomas de Bel"></a>
 
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/thomas-de-bel/">
+    <h3 class="person-name"><a href="https://www.computationalpathologygroup.eu/members/thomas-de-bel/">
       Thomas de Bel
+      <small><svg class="svg-icon svg-icon-external-link"><use xlink:href="#icon-external-link"></use></svg></small>
     </a></h3>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 
-</div>
-
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+      <p class='text-muted'>Computational Pathology Group</p>
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Erdi Calli">
     <h3 class="person-name"> Erdi Calli</h3>
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Matin Hosseinzadeh">
     <h3 class="person-name"> Matin Hosseinzadeh</h3>
-</div>
-
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Xie Weiyi">
     <h3 class="person-name"> Xie Weiyi</h3>
-</div>
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+</div><div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
 
 
     <a href="https://beta.diagnijmegen.nl/members/patrick-brand/"><img data-src="https://beta.diagnijmegen.nl/images/people/Patrick_Brand-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Patrick Brand"></a>
@@ -399,8 +388,7 @@ built around SOL to other departments of Radboud University in 2019.</p>
 
     <h4 class="person-title"><small>PhD student</small></h4>
 
-</div>
-        </div>
+</div>        </div>
     </div>
 
     </div>
